# ugv-rover

./: .gitignore  CMakeLists.txt  README.md  build.sh
config/: rover.json
include/ugv/config/: Config.hpp
include/ugv/input/: TerminalInput.hpp
include/ugv/sensors/: LidarManager.hpp
include/ugv/ui/: OledViewModel.hpp
src/: rover_control.cpp
src/config/: Config.cpp
src/input/: TerminalInput.cpp
src/sensors/: LidarManager.cpp
src/ui/: OledViewModel.cpp
